--- a/Flask-demo/static/styles.css
+++ b/Flask-demo/static/styles.css
@@ -474,7 +474,7 @@
 
 /* Services Section */
 .services {
-  background: #131313;
+  background: #F8CE47;
   display: flex;
   flex-direction: column;
   justify-content: center;
