--- a/Flask-demo/static/styles.css
+++ b/Flask-demo/static/styles.css
@@ -7,7 +7,7 @@
 }
 
 .navbar {
-  background: black;
+  background: white;
   height: 80px;
   display: flex;
   justify-content: center;
@@ -30,7 +30,7 @@
 }
 
 #navbar__logo {
-  background-color: #ffffff;
+  background-color: black;
   /* background-image: linear-gradient(to top, #ff0844 0%, #ffb199 100%); */
   background-size: 100%;
   -webkit-background-clip: text;
@@ -55,7 +55,7 @@
 }
 
 .navbar__links {
-  color: #fff;
+  color: black;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -71,24 +71,6 @@
   align-items: center;
   padding: 0 1rem;
   width: 100%;
-}
-
-.button {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  text-decoration: none;
-  padding: 10px 20px;
-  height: 100%;
-  width: 100%;
-  border: none;
-  outline: none;
-  border-radius: 4px;
-  background: #833ab4;
-  background: -webkit-linear-gradient(to right, #fcb045, #fd1d1d, #833ab4);
-  background: linear-gradient(to right, #fcb045, #fd1d1d, #833ab4);
-  color: #fff;
-  transition: all 0.3s ease;
 }
 
 .navbar__links:hover {
@@ -138,7 +120,7 @@
     height: 3px;
     margin: 5px auto;
     transition: all 0.3s ease-in-out;
-    background: #fff;
+    background: black;
   }
 
   .navbar__item {
@@ -192,7 +174,7 @@
 
 /* Hero Section */
 .hero {
-  background-image: url("contact-bg.png");
+  background-image: url("Picture1.png");
   /* background: linear-gradient(to right, #161616, #000000); */
   background-color: #cccccc;
   padding: 200px 0;
@@ -332,7 +314,7 @@
   font-weight: 700;
 }
 
-.main__btn {
+.button {
   font-size: 1.8rem;
   background: black;
   /* background: -webkit-linear-gradient(to right, #fcb045, #fd1d1d, #833ab4);
@@ -347,14 +329,14 @@
   outline: none;
 }
 
-.main__btn a {
+.button a {
   position: relative;
   z-index: 2;
   color: #fff;
   text-decoration: none;
 }
 
-.main__btn:after {
+.button:after {
   position: absolute;
   content: '';
   top: 0;
@@ -366,11 +348,11 @@
   border-radius: 4px;
 }
 
-.main__btn:hover {
+.button:hover {
   color: #fff;
 }
 
-.main__btn:hover:after {
+.button:hover:after {
   width: 100%;
 }
 
@@ -480,64 +462,45 @@
   justify-content: center;
   align-items: center;
   height: 100%;
-  padding: 10rem 0;
+  padding: 5rem 0;
 }
 
 .services h1 {
-  background-color: #ff8177;
-  background-image: linear-gradient(to right, #ff0844 0%, #f7673c 100%);
+  background-color: black;
   background-size: 100%;
   -webkit-background-clip: text;
   -moz-background-clip: text;
   -webkit-text-fill-color: transparent;
   -moz-text-fill-color: transparent;
-  margin-bottom: 5rem;
+  margin-bottom: 2rem;
   font-size: 2.5rem;
 }
 
 .services__wrapper {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr;
   grid-template-rows: 1fr;
 }
 
 .services__card {
-  margin: 10px;
-  height: 425px;
-  width: 300px;
-  border-radius: 4px;
+  margin: 50px;
+  height: 200px;
+  width: 350px;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  color: #fff;
-  background-image: linear-gradient(to right, #00dbde 0%, #fc00ff 100%);
+  color: black;
+  background: white;
   transition: 0.3s ease-in;
 }
 
 .services__card:nth-child(2) {
-  background: #1fa2ff; /* fallback for old browsers */
-  background: -webkit-linear-gradient(
-    to right,
-    #a6ffcb,
-    #12d8fa,
-    #1fa2ff
-  ); /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(
-    to right,
-    #a6ffcb,
-    #12d8fa,
-    #1fa2ff
-  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background: white; /* fallback for old browsers */
 }
 
 .services__card:nth-child(3) {
-  background-image: linear-gradient(
-    -225deg,
-    #231557 0%,
-    #44107a 29%,
-    #ff1361 67%,
-    #fff800 100%
-  );
+  background: white; /* fallback for old browsers */
+  padding: 0 2rem;
 }
 
 .services__card h2 {
@@ -591,7 +554,7 @@
 /* Footer CSS */
 .footer__container {
   background-color: #131313;
-  padding: 5rem 0;
+  padding: 2rem 0;
   display: flex;
   flex-direction: column;
   justify-content: center;
